--- a/src/features/Heroes/heroes.scss
+++ b/src/features/Heroes/heroes.scss
@@ -34,7 +34,6 @@
   padding: 100px 0;
   font-size: 70px;
   background: map-get($pallete, primary );
-  // text-align: center;
 
   h2{
     margin: 0 auto;
@@ -45,7 +44,6 @@
   }
 
   span{
-    // background: $white;
     color: $white;
     text-transform: uppercase;
     letter-spacing: -2px;
@@ -81,8 +79,12 @@
 @media (max-width: 998px) {
 
   .heroes-title{
-    padding: 20px 20vw 20px 25px;
+    padding: 20px 20vw 30px 25px;
     font-size: 40px;
+
+    h2{
+      padding: 0;
+    }
 
     span.small {
       font-size: 20px;
