--- a/src/features/Heroes/heroes.scss
+++ b/src/features/Heroes/heroes.scss
@@ -31,9 +31,10 @@
 
 .heroes-title{
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 70px 0 130px;
   font-size: 70px;
   background: map-get($pallete, primary );
+  position: relative;
 
   h2{
     margin: 0 auto;
@@ -54,6 +55,55 @@
       display: table;
       margin-left: 5px;
     }
+  }
+}
+
+.arrow-down{
+  position: absolute;
+  right: 50%;
+  bottom: 15%;
+  width: 12px;
+  height: 150px;
+  transform: translateX(-50%);
+  // background-color: $white;
+  -webkit-animation: arrow-down 3s ease-in-out;
+  animation: arrow-down 3s ease-in-out;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  cursor: pointer;
+
+  &:before, 
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 50px;
+    height: 12px;
+    bottom: 0;
+    left: 29%;
+    background-color: $white;
+  }
+
+  &:before {
+    transform: rotate(45deg) translateX(-66%) translateY(164%);
+  }
+  &:after {
+    transform: rotate(-45deg) translateX(-1%) translateY(-105%);
+  }
+}
+
+@-webkit-keyframes arrow-down {
+  0% {
+      transform: translateY(0)
+  }
+  25%{
+    transform: translateY(-25px)
+  }
+  50% {
+    transform: translateY(0)
+  }    
+  100% {
+    transform: translateY(0)
   }
 }
 
@@ -78,8 +128,12 @@
 
 @media (max-width: 998px) {
 
+  .arrow-down{
+    bottom: 10%
+  }
+
   .heroes-title{
-    padding: 20px 20vw 30px 25px;
+    padding: 20px 20vw 100px 25px;
     font-size: 40px;
 
     h2{
