--- a/src/features/Heroes/heroes.scss
+++ b/src/features/Heroes/heroes.scss
@@ -7,7 +7,7 @@
 
   .heroes-loading{
     display: flex;
-    height: 200px;
+    padding: 20px 0 150px;
     justify-content: center;
     align-items: center;
     flex-direction: column;
@@ -19,10 +19,7 @@
       border-top: 1px solid #000;
       border-left: 1px solid #000;
       border-radius: 50%;
-      -webkit-animation: spiner 0.5s infinite linear;
-      -moz-animation:    spiner 0.5s infinite linear; 
-      -o-animation:      spiner 0.5s infinite linear;
-      animation:         spiner 0.5s infinite linear;
+      animation: spiner 0.5s infinite linear;
       display: block;
       margin: 10px auto;
     }
@@ -61,49 +58,30 @@
 .arrow-down{
   position: absolute;
   right: 50%;
-  bottom: 15%;
-  width: 12px;
-  height: 150px;
-  transform: translateX(-50%);
-  // background-color: $white;
-  -webkit-animation: arrow-down 3s ease-in-out;
-  animation: arrow-down 3s ease-in-out;
-  -webkit-animation-iteration-count: infinite;
+  bottom: 10%;
+  width: 40px;
+  height: 40px;
+  transform: translateX(50%) rotate(-45deg);
+  animation: arrow-down 2s ease-in-out;
   animation-iteration-count: infinite;
   cursor: pointer;
 
-  &:before, 
-  &:after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 50px;
-    height: 12px;
-    bottom: 0;
-    left: 29%;
-    background-color: $white;
-  }
-
-  &:before {
-    transform: rotate(45deg) translateX(-66%) translateY(164%);
-  }
-  &:after {
-    transform: rotate(-45deg) translateX(-1%) translateY(-105%);
-  }
+  border-left: 12px solid #FFF;
+  border-bottom: 12px solid #FFF;
 }
 
 @-webkit-keyframes arrow-down {
   0% {
-      transform: translateY(0)
+    transform: translateY(0) translateX(50%) rotate(-45deg);
   }
   25%{
-    transform: translateY(-25px)
+    transform: translateY(-15px) translateX(50%) rotate(-45deg);
   }
   50% {
-    transform: translateY(0)
+    transform: translateY(0) translateX(50%) rotate(-45deg);
   }    
   100% {
-    transform: translateY(0)
+    transform: translateY(0) translateX(50%) rotate(-45deg);
   }
 }
 
